# Fractals

./: .clang-format  CMakeLists.txt  README
ContExp/: Iterate.h  JULIA  Makefile  contexp  contexp.cpp  func.cpp  func.h  plotMandel.py
Mandelbrot/: MANDELBROT  MANDELBROT0  Makefile  func.cpp  mandelbrot  mandelbrot.cpp  plotMandel.py
MiscMap/: Iterate.h  MANDELBROT  Makefile  fractalGUI.py  fractalGUI.py~  func.cpp  func.h  julia  julia.cpp  mandelbrot  mandelbrot.cpp  map
